src/objects/Compliance__c.object
<CustomObject>
    <description>Use this object for all compliance information, activation and deactivation.</description>
    <fields>
        <fullName>ADV_PPD_Sent__c</fullName>
        <formula>Opportunity_New__r.ADV_PPD_Sent__c</formula>
        <label>PPD Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Onboard</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account_Name__r.Owner.FirstName &amp;&quot; &quot;&amp; Account_Name__r.Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <formula>Account_Name__r.Activation_Date__c</formula>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_to_Restricted_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Restricted List?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Sale Amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_By_c__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &quot;Approved&quot;), LastModifiedBy.FirstName&amp;&quot;&quot;&amp; LastModifiedBy.LastName&amp;&quot; &quot;&amp; Text(LastModifiedDate), &quot;&quot;)</formula>
        <label>Approved By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Link__c</fullName>
        <label>Box Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CAF_Type__c</fullName>
        <label>CAF Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Deactivation</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canadian_Customer__c</fullName>
        <inlineHelpText>If Yes, send special notice.</inlineHelpText>
        <label>Canadian Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Error__c</fullName>
        <formula>IF(ISPICKVAL(Error_Reason__c, &quot;&quot;), False, True)</formula>
        <label>Case Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Info_Provided_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact that provided the change information</description>
        <inlineHelpText>Contact that provided the change information</inlineHelpText>
        <label>Change Info Provided by:</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Compliance</relationshipLabel>
        <relationshipName>Onboard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                    <label>Phone Number</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Favor Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_State_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check State Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Filled in by a workflow to show when the CAF was moved to the &quot;Complete&quot; stage.</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who should compliance reach out to with questions?</inlineHelpText>
        <label>Compliance Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Compliance (Compliance Main Contact)</relationshipLabel>
        <relationshipName>Compliance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Opportunity_New__r.Contract_Start_Date__c</formula>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Action_Form_Type__c</fullName>
        <description>Is this a new client, a lost client, or just an address change?</description>
        <inlineHelpText>Is this a new client, a lost client, or just an address change?</inlineHelpText>
        <label>Customer Action Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Deactivation</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Channel__c</fullName>
        <formula>Text(Opportunity_New__r.Customer_Channel__c)</formula>
        <label>Customer Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Notice_from_Solicitor__c</fullName>
        <label>Customer Notice from Solicitor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Solicitor_Used__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <formula>Account_Name__r.Deactivation_Date__c</formula>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deactivation_Reason__c</fullName>
        <formula>Text(  Opportunity_New__r.Close_Reason__c  )</formula>
        <label>Deactivation Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docs_added_to_compliance_client_file__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Create virtual Compliance folder for this account under the appropriate client file and add compliance documents (OFAC, RIA, ID, etc)</inlineHelpText>
        <label>Docs added to compliance client file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EL_Compliance_Status__c</fullName>
        <formula>Text(Opportunity_New__r.EL_Compliance_Status__c)</formula>
        <label>EL Compliance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Wall_Sitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Wall Sitter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Green Street</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Compliance (Engagement Wall Sitter)</relationshipLabel>
        <relationshipName>Compliance2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <label>Error Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transition Delay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favor_Access__c</fullName>
        <inlineHelpText>If yes, a favor opportunity will be created for you to activate and permission users.</inlineHelpText>
        <label>Favor Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favor_Reason__c</fullName>
        <inlineHelpText>Please give context as to why we are extending a favor to this person.</inlineHelpText>
        <label>Favor Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foreign_Bank__c</fullName>
        <inlineHelpText>If Yes, second prinicpal signature is required.</inlineHelpText>
        <label>Foreign Bank?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_CRS_Sent__c</fullName>
        <formula>Text(Opportunity_New__r.CRS_Sent__c)</formula>
        <label>Form CRS Sent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fully_Executed_Returned__c</fullName>
        <label>Fully Executed Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Google_Search_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Search Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Search__c</fullName>
        <inlineHelpText>Search for the company on www.google.com to ensure they are a real entity</inlineHelpText>
        <label>Google Search</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Further Investigation Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newport</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Request_Date__c</fullName>
        <label>ID Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identification_Request__c</fullName>
        <label>ID Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Public__c</fullName>
        <formula>text(Opportunity_New__r.Is_Public__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Public?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KYC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Letter sent to client verifying the change information</inlineHelpText>
        <label>Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Client_Date__c</fullName>
        <formula>Account_Name__r.Lost_Client__c</formula>
        <label>Lost Client Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Information__c</fullName>
        <description>Please provide the updated client data here</description>
        <inlineHelpText>Please provide the updated client data here</inlineHelpText>
        <label>New Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <label>Notes/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OFAC_Check__c</fullName>
        <description>Date the OFAC was run</description>
        <label>OFAC Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Information__c</fullName>
        <description>Provide the old address, phone number, name, etc</description>
        <inlineHelpText>Provide the old address, phone number, name, etc</inlineHelpText>
        <label>Old Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_Boycott_List__c</fullName>
        <inlineHelpText>Iraq, Kuwait, Lebanon, Libya, Qatar, Saudi Arabia, Syria, Yemen, North Korea?</inlineHelpText>
        <label>On Boycott List?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_New__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Compliance</relationshipLabel>
        <relationshipName>Compliance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>Text(Opportunity_New__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Error_Reason__c</fullName>
        <label>Other Error Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Politically_Exposed_Person__c</fullName>
        <label>Politically Exposed Person?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_GSA_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main GSA contact</description>
        <label>Primary GSA Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Green Street, React</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Compliance (Primary GSA Contact)</relationshipLabel>
        <relationshipName>Compliance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Types__c</fullName>
        <formula>IF(INCLUDES( Opportunity_New__r.Product_Types__c, &quot;LDC&quot;), &quot;LDC;&quot;, NULL) &amp;
    IF(INCLUDES( Opportunity_New__r.Product_Types__c, &quot;React&quot;), &quot;React;&quot;, NULL) &amp; 
    IF(INCLUDES( Opportunity_New__r.Product_Types__c, &quot;Research&quot;), &quot;Research;&quot;, NULL) &amp;
    IF(INCLUDES( Opportunity_New__r.Product_Types__c, &quot;News&quot;), &quot;News;&quot;, NULL)</formula>
        <label>Product Types</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIACheck__c</fullName>
        <description>Date the RIA Check was ran</description>
        <label>RIA Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registered_Investment_Advisor__c</fullName>
        <label>Registered Investment Advisor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Notes__c</fullName>
        <label>Risk Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Timing of assignment</fullName>
                </value>
                <value>
                    <fullName>GSA name will be used in public domain</fullName>
                </value>
                <value>
                    <fullName>Client is allowed to redistribute the deliverable to select market participants</fullName>
                </value>
                <value>
                    <fullName>Deliverable will be in public domain</fullName>
                </value>
                <value>
                    <fullName>Doing due diligence on company in our coverage universe</fullName>
                </value>
                <value>
                    <fullName>Doing due diligence on company soon to be in our coverage universe</fullName>
                </value>
                <value>
                    <fullName>Doing due diligence on company we previously worked for, but can’t use previous data/findings</fullName>
                </value>
                <value>
                    <fullName>Need to use GSA-acquired data that can’t be republish</fullName>
                </value>
                <value>
                    <fullName>Need to acquire/publish third-party data sources</fullName>
                </value>
                <value>
                    <fullName>Need the client to provide third party data sources</fullName>
                </value>
                <value>
                    <fullName>Need to partner with another advisory firm</fullName>
                </value>
                <value>
                    <fullName>Need to partner with a brokerage firm</fullName>
                </value>
                <value>
                    <fullName>Engagement will influence a private market transaction</fullName>
                </value>
                <value>
                    <fullName>Engagement will likely influence a public market event</fullName>
                </value>
                <value>
                    <fullName>Client is company’s Board and findings can’t be communicated to Management</fullName>
                </value>
                <value>
                    <fullName>Client is a consortium of companies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SWF_Foreign_Jurisdiction_Entity_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SWF: Foreign Jurisdiction&amp;Entity Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is required for Foreign Banks</inlineHelpText>
        <label>Second Approval</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.LastName</field>
                <operation>contains</operation>
                <value>Waller,Francis</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Compliance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Request_for_ID__c</fullName>
        <label>Send Request for ID</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Change_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Already Requested</fullName>
                    <label>No, Already Requested</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                    <label>No, Received</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sign_EL_Received__c</fullName>
        <label>Sign EL Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solicitor_Used__c</fullName>
        <label>Solicitor Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                    <default>true</default>
                    <label>Started</label>
                </value>
                <value>
                    <fullName>Transitioned</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_to_ERISA_Regulation__c</fullName>
        <label>Subject to ERISA Regulation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_End_Date2__c</fullName>
        <formula>Opportunity_New__r.Trial_End_Date__c</formula>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <description>On this date there needs to be one of 2 actions: 1) Deactivate or 2) Fully On-board</description>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>US_to_EU_GDPR_letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US to EU, GDPR letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verify_OFAC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verify OFAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Company Website</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Compliance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CAF_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved,Cancelled</value>
        </filters>
        <label>Complete</label>
    </listViews>
    <listViews>
        <fullName>All_Compliance_Records</fullName>
        <columns>NAME</columns>
        <columns>CAF_Type__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Compliance__c.US_Subscription</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>10/1/2021 12:00 AM</value>
        </filters>
        <label>All Compliance Records</label>
    </listViews>
    <listViews>
        <fullName>Compliance_Advisory_Compliance</fullName>
        <columns>NAME</columns>
        <columns>CAF_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Approved_By_c__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>All Advisory</label>
        <queue>Compliance_Advisory</queue>
        <sharedTo>
            <role>Advisory</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Subscription_Compliance</fullName>
        <columns>NAME</columns>
        <columns>CAF_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Approved_By_c__c</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>All Subscription</label>
        <queue>Compliance_Subscription</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Compliance_Records</fullName>
        <booleanFilter>(1 AND 4) OR (1 AND 2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>CAF_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Deactivation_Date__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Product_Types__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Started</value>
        </filters>
        <filters>
            <field>CAF_Type__c</field>
            <operation>equals</operation>
            <value>Deactivation</value>
        </filters>
        <filters>
            <field>Contract_Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CAF_Type__c</field>
            <operation>equals</operation>
            <value>Activation</value>
        </filters>
        <label>New Compliance Records</label>
        <queue>Compliance_Subscription</queue>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>CAF_Type__c</columns>
        <columns>Change_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Identification_Request__c</columns>
        <columns>Activation_Date__c</columns>
        <columns>Deactivation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Pending Approval</label>
        <sharedTo>
            <role>Compliance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Subscriptions_CAF_s_Started</fullName>
        <columns>NAME</columns>
        <columns>CAF_Type__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Activation_Date__c</columns>
        <columns>Deactivation_Date__c</columns>
        <columns>Product_Types__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Primary_GSA_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Started</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Compliance__c.US_Favor,Compliance__c.US_Subscription</value>
        </filters>
        <label>Subscriptions CAF&apos;s Started</label>
        <sharedTo>
            <role>Commercial_Operations</role>
            <role>Compliance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Susan_To_Do_s</fullName>
        <columns>NAME</columns>
        <columns>CAF_Type__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Activation_Date__c</columns>
        <columns>Deactivation_Date__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Transitioned</value>
        </filters>
        <label>Susan To Do&apos;s</label>
        <sharedTo>
            <role>Compliance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Transitioned</fullName>
        <columns>NAME</columns>
        <columns>CAF_Type__c</columns>
        <columns>Change_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Identification_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Transitioned</value>
        </filters>
        <label>Transitioned</label>
        <sharedTo>
            <role>Compliance</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance</pluralLabel>
    <recordTypes>
        <fullName>UK_Subscription</fullName>
        <active>true</active>
        <label>UK Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>US_Advisory</fullName>
        <active>true</active>
        <description>To be used for US Advisory Clients</description>
        <label>US Advisory</label>
    </recordTypes>
    <recordTypes>
        <fullName>US_Favor</fullName>
        <active>true</active>
        <description>To be used for US favor accounts.</description>
        <label>US Favor</label>
    </recordTypes>
    <recordTypes>
        <fullName>US_Subscription</fullName>
        <active>true</active>
        <description>To be used for clients with a US contract in place.</description>
        <label>US Subscription</label>
    </recordTypes>
</CustomObject>